--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,5 @@ spring.jpa.properties.hibernate.format_sql=true
 
 
 spring.jpa.properties.hibernate.jdbc.time_zone=UTC
+
+spring.cache.type=simple
