--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=ecommerceChallenge
 
 
-spring.datasource.url=jdbc:mysql://localhost:3306/ecommerce
+spring.datasource.url=jdbc:mysql://localhost:3306/ecommerce_db
 spring.datasource.username=root
 spring.datasource.password=Er142308
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -14,4 +14,6 @@ spring.jpa.properties.hibernate.format_sql=true
 
 spring.jpa.properties.hibernate.jdbc.time_zone=UTC
 
-spring.cache.type=simple
+
+
+spring.cache.type=caffeine
