--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,6 +14,20 @@ spring.jpa.properties.hibernate.format_sql=true
 
 spring.jpa.properties.hibernate.jdbc.time_zone=UTC
 
+api.security.token.secret=compass
 
 
 spring.cache.type=caffeine
+
+
+
+spring.mail.host=sandbox.smtp.mailtrap.io
+spring.mail.port=587
+spring.mail.username=ddde91e65e5ff9
+spring.mail.password=cdee430439b191
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+
+
+
